--- a/code/basic/rust/learn_crate/mylib/Cargo.toml
+++ b/code/basic/rust/learn_crate/mylib/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "learn_crate"
+name = "mylib"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mylib =  { path = "./mylib"}
